crates/math-core/tests/snapshots/conversion_test__tag2.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{align} 1\\mathbf{\\tag{32}}\\\\2\\tag{64}\\end{align}"
---
<math>
    <mtable displaystyle="true" scriptlevel="0" style="width: 100%">
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mn>1</mn>
                <mrow></mrow>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;">
                <mtext>(32)</mtext>
            </mtd>
        </mtr>
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mn>2</mn>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;">
                <mtext>(64)</mtext>
            </mtd>
        </mtr>
    </mtable>
</math>
